--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,57 @@
-:root {
-    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --bs-body-font-family: var(--bs-font-sans-serif);
+body {
+    background-color: #212529;
+    font-family: -apple-system, sans-serif;
+    text-align: center;
 }
 
 h1 {
-    font-family: -apple-system, sans-serif;
-}
-
-body {
-    font-family: -apple-system, sans-serif;
-    text-align: center;
+    font-size: 40px;
+    color: white;
 }
 
 table {
     margin: 20px auto;
     border-collapse: collapse;
     width: 80%;
+    border-radius: 5px;
 }
+
 th, td {
+    color: #2e2e2e;
     padding: 10px;
-    border: 1px solid #a6a6a6;
+    border: 1px solid #7d7d7d;
 }
+
 th {
-    background-color: #ddd;
+    background-color: #6ea8fe;
 }
+
+input[type="text"],
+input[type="number"] {
+    padding: 3px;
+    border: 1px solid #7d7d7d;
+    background-color: transparent;
+    border-radius: 4px;
+}
+
 button {
     margin: 10px;
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 8px;
 }
+
 #remainingWeight {
     margin-top: 10px;
     font-weight: bold;
+    color: #b3b3b3;
 }
+
 .overweight {
     color: red;
 }
+
 .passing {
     color: green;
 }
