--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ td {
 }
 
 th {
-    color: #2e2e2e;
+    color: #141313;
     padding: 10px;
     border: 1px solid #7d7d7d;
 }
@@ -44,16 +44,16 @@ input[type="number"] {
     border-radius: 4px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button {  
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
 
-   opacity: 0;
+    -webkit-appearance: none;
 
 }
 
 button {
     margin: 10px;
-    padding: 10px;
+    padding: 8px 14px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 8px;
